layout bug on create quizz page 3 fixed

--- a/css/createQuizz.css
+++ b/css/createQuizz.css
@@ -6,9 +6,6 @@
     align-items: center;
 }
 
-.create-3{
-    display: flex;
-}
 .title-create{
     font-weight: 700;
     font-size: 23px;
